--- a/css/maps.css
+++ b/css/maps.css
@@ -37,6 +37,16 @@ body
 	z-index: 10002;
 }
 
+.maps_search
+{
+    width: 500px;
+    height: 64px;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 10002;
+}
+
 .maps_footer
 {
 	width: 100%;
@@ -137,17 +147,40 @@ body
 	display: none;
 }
 
+.maps_main_searchbox
+{
+    width: 410px;
+	height: 40px;
+    background-color: rgba(80,80,80,0.95);
+    position: fixed;
+    top: 30px;
+    left: 50px;
+    box-shadow: 2px 2px 5px #777777;
+    z-index: 10002;
+}
+
 .maps_search_box
 {
 	width: 350px;
 	height: 40px;
-	border-radius: 5px;
-	background-color: rgba(80,80,80,0.7);
-	border: 1px solid #888888;
+	background-color: rgba(80,80,80,0);
+	border: 0px solid #888888;
 	font-family: "Exo";
 	font-size: 24px;
 	color: #eeeeee;
-	padding: 3px;
+    z-index: 10002;
+}
+
+.maps_filter_box
+{
+    width: 410px;
+    height: 400px;
+    position: fixed;
+    left: 50px;
+    top: 70px;
+    background-color: rgba(80,80,80,0.95);
+    z-index: 10002;
+    visibility: hidden;
 }
 
 .maps_galaxy_box
@@ -230,6 +263,23 @@ body
 	font-size: 16px;
 	color: #cccccc;
 	text-decoration: none;
+}
+
+
+.maps_footer_line
+{
+    height: 20px;
+    width: 350px;
+    position: fixed;
+    right: 0px;
+    background-color: rgba(51, 51, 51, 0.75);
+    font-family: "Exo";
+    font-size: 14px;
+    color: #BBBBBB;
+    padding: 3px;
+    bottom: 20px;
+    z-index: 10002;
+    text-align: right;
 }
 
 
