--- a/css/maps.css
+++ b/css/maps.css
@@ -75,7 +75,7 @@ body
 	top: 0px;
 	left: 0px;
 	background-color: rgba(76, 76, 82, 0.2);
-}	
+}
 
 .maps_starfield {
 	background: #222;
@@ -149,7 +149,7 @@ body
 
 .maps_main_searchbox
 {
-    width: 410px;
+    width: 450px;
 	height: 40px;
     background-color: rgba(80,80,80,0.95);
     position: fixed;
@@ -161,7 +161,7 @@ body
 
 .maps_search_box
 {
-	width: 350px;
+	width: 300px;
 	height: 40px;
 	background-color: rgba(80,80,80,0);
 	border: 0px solid #888888;
@@ -188,8 +188,8 @@ body
 	width: 60px;
 	height: 40px;
 	border-radius: 5px;
-	background-color: rgba(80,80,80,0.7);
-	border: 1px solid #888888;
+	background-color: rgba(80,80,80,0);
+	border: 0px solid #888888;
 	font-family: "Exo";
 	font-size: 24px;
 	color: #eeeeee;
@@ -229,10 +229,24 @@ body
 	background-color: rgba(51, 51, 51, 0.95);
 	position: absolute;
 	right: 0px;
-	top: 64px;
+	top: 0px;
 	z-index: 10002;
 	overflow: hidden;
 	display: none;
+}
+
+.maps_info_sidebar_separator
+{
+    width: 100%;
+    height: 2px;
+    border-top: solid 1px #AAAAAA;
+}
+
+.maps_info_sidebar_text
+{
+    font-family: "Exo";
+    font-size: 14px;
+    color: #CCCCCC;
 }
 
 .maps_header_links
